# OpenDND_EthglobalCannes26

./: .env.example  .gitignore  OPENCLAW_APP_INTEGRATION.md  README.md  config.py  generate_voices.py  main.py  mobile-preview.html  quest_generation_log.txt  quest_highstakes.json  requirements.txt  run_generate.py  run_play.py  run_simulate.py  test_booking_integration.py  test_quest_generation.py  test_research.py
.claude/: Prd - Hackathon-Cannes-2026 (1).md
LP/: index.html  package.json
LP/src/: App.tsx  index.css
agents/: artifact_renderer.py
agents/booking/: booking_agent.py  models.py
agents/city_research/: agent.py  models.py  tools.py
agents/integration/: __init__.py  serializer.py  service.py
artifacts/: playlist.html
backend/: Dockerfile  config.py  main.py  requirements.txt
blockchain/: README.md  __init__.py  config.py  hts_service.py  models.py  pyproject.toml  router.py  stake_service.py  test_blockchain.py
checkpoints/: character_0.json  character_1.json  character_2.json  character_3.json  character_4.json  character_5.json  concept.json  judge_result.json  meta.json  quest_raw.json  step_1.json  step_2.json  step_3.json  step_4.json  step_5.json  step_6.json  steps_all.json
docs/: OPENCLAW_APP_INTEGRATION.md  Prd - Hackathon-Cannes-2026.txt  ecrans.txt  onglet.txt
frontend/: package.json  pnpm-lock.yaml
landing_page/: package-lock.json
scripts/: generate_voices.py  reset_db.sh  run_generate.py  run_play.py  run_simulate.py
tests/: test_0g_compute_live.py  test_booking_integration.py  test_quest_generation.py  test_research.py
(+125 files in other folders)
