[project]
name = "opendnd-blockchain"
version = "0.1.0"
description = "Hedera blockchain integration for OpenD&D — quest rewards, NFT badges, event logging"
requires-python = ">=3.10"
dependencies = [
    "hiero-sdk-python>=0.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "x402[fastapi]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
